# gRPC_projects

./: README.md
Async_gRPC/: CMakeLists.txt  README.md
Async_gRPC/client/: main.cpp
Async_gRPC/client/include/: client_impl.h
Async_gRPC/proto/: data.proto
Async_gRPC/server/include/: server_impl.h
Async_gRPC/server/src/: server_impl.cpp
Sync_gRPC/: CMakeLists.txt  README.md
Sync_gRPC/client_async/: main.cpp
Sync_gRPC/client_async/include/: client_impl.h
Sync_gRPC/client_async/src/: client_impl.cpp
Sync_gRPC/client_sync/: main.cpp
Sync_gRPC/client_sync/include/: client_impl.h
Sync_gRPC/client_sync/src/: client_impl.cpp
Sync_gRPC/server/: main.cpp
Sync_gRPC/server/include/: server_impl.h
Sync_gRPC/server/src/: server_impl.cpp
Thread_test/: CMakeLists.txt  README.md  main.cpp
